tests/error/typedef_to_array_of_unknown_size_should_not_get_overwritten_by_sized_typedef.c
// broken
// fail

typedef int int_array[];
typedef int int_array[3];

int main(){
    
}


